cmake_minimum_required(VERSION 3.27)
project(online)

set(CMAKE_CXX_STANDARD 17)

add_executable(online main.cpp
        layfolk.cpp
        buyer.cpp
        honouredGuest.cpp
        book.cpp
        member.cpp
        book.cpp
        buyer.cpp
        honouredGuest.cpp
        layfolk.cpp
        member.cpp
        member.cpp
        book.cpp
        order.h
        order.cpp
        Box.h
        Box.cpp
        buyerBox.cpp
        buyerBox.h
        booksBox.cpp
        booksBox.h
        ordersBox.cpp
        ordersBox.h
        mybooklistBox.cpp
        mybooklistBox.h)
